ft: fix alignment

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -29,6 +29,7 @@
     background-color: #015959;
     color: white;
     font-size: 24px;
+    margin-top: 1rem;
 }
 
 .col-md-6-2{
